Date Picker Move Forward Years #506
~~/additional_information.html~~
<input type="date" class="form-control" id="otherformfirst" name="otherformfirst"

~~/additional_information.html~~

~~/additional_information_ROA_optional.html~~
<input type="date" class="form-control" id="otherformfirst" name="otherformfirst"

~~/additional_information_ROA_optional.html~~
<input type="date" class="form-control" id="otherformcommerce" name="otherformcommerce"

~~/filing_basis_ab.html~~
<input type="date" class="form-control" id="connection-date" name="connectiondate" value=""

~~/filing_basis_ab.html~~
<input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value=""

~~/filing_basis_ab.html~~
<input type="date" class="form-control" id="connection-date" name="connectiondate" value=""

~~/filing_basis_ab.html~~
<input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value=""

~~/filing_basis_ab.html~~
<input type="date" class="form-control" id="connection-date" name="connectiondate" value=""

~~/filing_basis_ab.html</mm_file>~~
<input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value=""

~~/filing_basis_ab.html</mm_file>~~
<input type="date" class="form-control" id="connection-date" name="connectiondate" value=""

~~/filing_basis_ab.html</mm_file>~~
<input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value=""

~~/filing_basis_ab.html</mm_file>	~~
<input type="date" class="form-control" id="connection-date" name="connectiondate" value=""

~~/filing_basis_ab.html</mm_file>~~
<input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value=""

~~/filing_basis_ab.html</mm_file>~~
<input type="date" class="form-control" id="connection-date" name="connectiondate" value=""

~~/filing_basis_ab.html~~
<input type="date" class="form-control" id="firstconnection-date" name="firstconnectiondate" value=""

~

--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -751,8 +751,8 @@
                                             <input type="text" class="form-control" id="bar-membership-number" name="attorneyBarMembershipNumber" value="">
                                         </div>
                                         <div class="form-group form-group-md col-xs-12 col-md-4">
-                                            <label for="bar-membership-date">Date of admission</label>
-                                            <input type="date" class="form-control" id="bar-membership-date" name="attorneyBarAdmissionDate" value="">
+                                            <label for="bar-membership-date">Date of admission<span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                            <input type="text" class="form-control datepicker" id="bar-membership-date" name="attorneyBarAdmissionDate" value="" placeholder="mm/dd/yyyy">
                                         </div>
                                     </div>
                                     <div class="form-group form-group-md upload">
