--- a/owner partnership files/owner-form.html
+++ b/owner partnership files/owner-form.html
@@ -199,7 +199,7 @@
                         <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
                             <label class="switch">
                                 <input class="togglesavemore" type="checkbox">
-                                <span class="slider"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                                <span class="slider"><span id="on">On</span> <span id="off">Off</span></span>
                             </label>
                         </div>
                     </div>
