--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -211,7 +211,7 @@
                         <div class="col-xs-12" id="errorslist" tabindex="-1">
                         </div>
                     </div>
-                    <p class="instructions" id="costsavingoptions">Reduced fee mode</p>
+                    <p class="instructions" id="costsavingoptions">Reduced fee mode <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="Receive a lower application fee when all fields marked with the reduced fee indicator are completed."></a></p>
                     <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                         <label class="switch">
                         <input class="togglesavemore" type="checkbox">
