Post Reg Section 8 Checkbox Fix
-- Ignore other file changes, they've been implemented in Maven
-- This commit is regarding filename post_reg_section8.html

--- a/post_reg_section8.html
+++ b/post_reg_section8.html
@@ -456,8 +456,8 @@
                                                     <div class="row">
                                                         <div class="col-xs-12">
                                                             <div>
-                                                                <input class="form-check-input checkmark" type="checkbox" value="" tabindex="0" aria-labelledby="userAccept-label_one" id="user-accept-checkbox" name="user-accept-checkbox">
-                                                                <label class="form-check-label form-check-left form-check" for="user-accept-checkbox" id="userAccept-label_one"><span class="radio notspecial">This class has a good/service in use.</span></label>
+                                                                <input class="form-check-input checkmark" type="checkbox" value="" tabindex="0" aria-labelledby="userAccept-label_one" id="user-accept-checkbox_two" name="user-accept-checkbox">
+                                                                <label class="form-check-label form-check-left form-check" for="user-accept-checkbox_two" id="userAccept-label_one"><span class="radio notspecial">This class has a good/service in use.</span></label>
                                                             </div>
                                                             <section aria-label="class image and description">
                                                                 <div role="radiogroup" class="form-group form-group-md">
