--- a/additional_information.html
+++ b/additional_information.html
@@ -445,11 +445,11 @@
                                                             <div class="form-group form-group-md">
                                                                 <div class="row">
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="otherformfirst" class="matchlabelheight">Provide date of first use in another form:<span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                        <label for="otherformfirst" class="matchlabelheight">Provide date of first use in another form:<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                         <input type="text" class="form-control datepicker" id="otherformfirst" name="otherformfirst" placeholder="mm/dd/yyyy">
                                                                     </div>
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="otherformcommerce" id="getit" class="matchlabelheight">Provide date of first use in commerce in another form:<span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                        <label for="otherformcommerce" id="getit" class="matchlabelheight">Provide date of first use in commerce in another form:<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                         <input type="text" class="form-control datepicker" id="otherformcommerce" name="otherformcommerce" placeholder="mm/dd/yyyy">
                                                                     </div>
                                                                 </div>
