--- a/dashboard.html
+++ b/dashboard.html
@@ -371,7 +371,7 @@
                                                 </div>
                                                 <div class="col-xs-12">
                                                     <div class="col-xs-12" id="announce">
-                                                        <h3 id="announceheader">Announcements</h3>
+                                                        <h3 id="announceheader"><span id="notify">Announcements</span></h3>
                                                     </div>
                                                     <div class="col-xs-12 dashsection">
                                                         <div class="tabwidget" id="tabmusic-wt" aria-describedby="announceheader">
