Dashboard New User +
-- Tables hide when no data to display
-- A11Y fix for date format readout (done in application)

--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -295,7 +295,7 @@
                                                         </div><!--END radiogroup-->
                                                         <div class="row form-group form-group-md yescommerce" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                <label for="connectiondateone" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                <label for="connectiondateone" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                 <input type="text" class="form-control datepicker" id="connectiondateone" name="connectiondateone" placeholder="mm/dd/yyyy">
                                                             </div> 
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
@@ -364,7 +364,7 @@
                                                                         <input type="text" class="form-control" id="appnumber">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
-                                                                        <label for="applicationdate">Foreign application filing date: <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                        <label for="applicationdate">Foreign application filing date: <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                         <input type="text" class="form-control foreignfiling datepicker" id="applicationdate" name="applicationdateone" min="" max="" placeholder="mm/dd/yyyy">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
@@ -410,15 +410,15 @@
                                                                         <input type="text" class="form-control" id="appnumbertwo">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
-                                                                        <label for="reg-date">Foreign registration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                        <label for="reg-date">Foreign registration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                         <input type="text" class="form-control datepicker" id="reg-date" name="regdate" value="" placeholder="mm/dd/yyyy">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
-                                                                        <label for="reg-date-exp">Foreign registration expiration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                        <label for="reg-date-exp">Foreign registration expiration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                         <input type="text" class="form-control datepicker" id="reg-date-exp" name="regdatexp" value="" placeholder="mm/dd/yyyy">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
-                                                                        <label for="renew-date">Foreign registration renewal date (if applicable): <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                        <label for="renew-date">Foreign registration renewal date (if applicable): <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                         <input type="text" class="form-control datepicker" id="renew-date" name="renewdate" value="" placeholder="mm/dd/yyyy">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12 upload">
@@ -473,11 +473,11 @@
                                                         </div><!--END radiogroup-->
                                                         <div class="row form-group form-group-md yesconnection" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                <label for="connection-date" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                <label for="connection-date" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                 <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy">
                                                             </div> 
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                <label for="firstconnection-date" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                <label for="firstconnection-date" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                 <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
@@ -542,7 +542,7 @@
                                                                         <input type="text" class="form-control" id="appnumber">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
-                                                                        <label for="application-date">Foreign application filing date: <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                        <label for="application-date">Foreign application filing date: <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                         <input type="text" class="form-control foreignfiling datepicker" id="application-date" name="applicationdate" min="" max="" placeholder="mm/dd/yyyy">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
@@ -587,15 +587,15 @@
                                                                         <input type="text" class="form-control" id="appnumbertwo">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
-                                                                        <label for="reg-date">Foreign registration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                        <label for="reg-date">Foreign registration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                         <input type="text" class="form-control datepicker" id="reg-date" name="regdate" value="" placeholder="mm/dd/yyyy">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
-                                                                        <label for="reg-date-exp">Foreign registration expiration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                        <label for="reg-date-exp">Foreign registration expiration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                         <input type="text" class="form-control datepicker" id="reg-date-exp" name="regdatexp" value="" placeholder="mm/dd/yyyy">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
-                                                                        <label for="renew-date">Foreign registration renewal date (if applicable): <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m d d y y y y</span></label>
+                                                                        <label for="renew-date">Foreign registration renewal date (if applicable): <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
                                                                         <input type="text" class="form-control datepicker" id="renew-date" name="renewdate" value="" placeholder="mm/dd/yyyy">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12 upload">
