--- a/dashboard_hide.html
+++ b/dashboard_hide.html
@@ -170,51 +170,7 @@
                                                                         </tr>
                                                                     </thead>
                                                                     <tbody>
-                                                                      <tr>
-                                                                        <td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
-                                                                        <td tabindex="0">87697840</td>
-                                                                        <td tabindex="0">87697838</td>
-                                                                        <td tabindex="0"><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Lynn Stanikmas</td>
-                                                                        <td tabindex="0">Draft</td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
-                                                                        <td tabindex="0">87697248</td>
-                                                                        <td tabindex="0">87587238</td>
-                                                                        <td tabindex="0"><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Jacob Goldstein</td>
-                                                                        <td>Completed</td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
-                                                                        <td tabindex="0">87697840</td>
-                                                                        <td tabindex="0">87697839</td>
-                                                                        <td tabindex="0"><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Jackie Babos</td>
-                                                                        <td tabindex="0">Draft</td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
-                                                                        <td tabindex="0">87697899</td>
-                                                                        <td tabindex="0">87693875</td>
-                                                                        <td tabindex="0"><img src="images/coloronly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Li Zhang</td>
-                                                                        <td tabindex="0">Draft</td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0"><button type="button" class="btn btn-sm close deleterow" value="" aria-label="remove this row"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></td>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td><!--control-->
-                                                                        <td tabindex="0">87697294</td>
-                                                                        <td tabindex="0">87697387</td>
-                                                                        <td tabindex="0"><img src="images/Example3_shape.jpg" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Avo Reid</td>
-                                                                        <td tabindex="0">Completed</td>
-                                                                      </tr>
+                                                                      
                                                                     </tbody>
                                                                 </table>
                                                             </div>
@@ -246,96 +202,7 @@
                                                                         </tr>
                                                                     </thead>
                                                                     <tbody>
-                                                                      <tr>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
-                                                                        <td tabindex="0">87697840</td>
-                                                                        <td tabindex="0">87697834</td>
-                                                                        <td tabindex="0"><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Lynn Stanikmas</td>
-                                                                        <td tabindex="0">12/21/2019</td>
-                                                                        <td tabindex="0">Abandoned</td>
-                                                                        <td tabindex="0"><a href="#">File a Petition to Revive</a></td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
-                                                                        <td tabindex="0">87697248</td>
-                                                                        <td tabindex="0">87697235</td>
-                                                                        <td tabindex="0"><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Jacob Goldstein</td>
-                                                                        <td tabindex="0">None</td>
-                                                                        <td tabindex="0">Completed</td>
-                                                                        <td tabindex="0">None</td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
-                                                                        <td tabindex="0">87697899</td>
-                                                                        <td tabindex="0">87697823</td>
-                                                                        <td tabindex="0"><img src="images/coloronly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Li Zhang</td>
-                                                                        <td tabindex="0">Draft</td>
-                                                                        <td tabindex="0">Draft</td>
-                                                                        <td tabindex="0">Filing Basis, Additional Information, Confirm and Pay</td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
-                                                                        <td tabindex="0">87697840</td>
-                                                                        <td tabindex="0">87697834</td>
-                                                                        <td tabindex="0"><img src="images/stylized_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Lynn Stanikmas</td>
-                                                                        <td tabindex="0">12/21/2019</td>
-                                                                        <td tabindex="0">Abandoned</td>
-                                                                        <td tabindex="0"><a href="#">File a Petition to Revive</a></td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
-                                                                        <td tabindex="0">87697248</td>
-                                                                        <td tabindex="0">87697235</td>
-                                                                        <td tabindex="0"><img src="images/adf-d-8-e-123-jpg.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Jacob Goldstein</td>
-                                                                        <td tabindex="0">None</td>
-                                                                        <td tabindex="0">Completed</td>
-                                                                        <td tabindex="0">None</td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
-                                                                        <td tabindex="0">87697899</td>
-                                                                        <td tabindex="0">87697823</td>
-                                                                        <td tabindex="0"><img src="images/designonly_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Li Zhang</td>
-                                                                        <td tabindex="0">Draft</td>
-                                                                        <td tabindex="0">Draft</td>
-                                                                        <td tabindex="0">Filing Basis, Additional Information, Confirm and Pay</td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
-                                                                        <td tabindex="0">87697840</td>
-                                                                        <td tabindex="0">87697834</td>
-                                                                        <td tabindex="0"><img src="images/designonly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Lynn Stanikmas</td>
-                                                                        <td tabindex="0">12/21/2019</td>
-                                                                        <td tabindex="0">Non-final Action Issued</td>
-                                                                        <td tabindex="0"><a href="#">Respond to Office Action</a></td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
-                                                                        <td tabindex="0">87697248</td>
-                                                                        <td tabindex="0">87697235</td>
-                                                                        <td tabindex="0"><img src="images/designwithtext_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Jacob Goldstein</td>
-                                                                        <td tabindex="0">None</td>
-                                                                        <td tabindex="0">Completed</td>
-                                                                        <td tabindex="0">None</td>
-                                                                      </tr>
-                                                                      <tr>
-                                                                        <td tabindex="0" role="button" aria-expanded="false" aria-label="expand additional columns for this record"></td>
-                                                                        <td tabindex="0">87697899</td>
-                                                                        <td tabindex="0">87697823</td>
-                                                                        <td tabindex="0"><img src="images/Example2_shape_words.jpg" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                                        <td tabindex="0">Li Zhang</td>
-                                                                        <td tabindex="0">Draft</td>
-                                                                        <td tabindex="0">Draft</td>
-                                                                        <td tabindex="0">Filing Basis, Additional Information, Confirm and Pay</td>
-                                                                      </tr>
+                                                                      
                                                                     </tbody>
                                                                 </table>
                                                             </div>
@@ -371,7 +238,7 @@
                                                 </div>
                                                 <div class="col-xs-12">
                                                     <div class="col-xs-12" id="announce">
-                                                        <h3 id="announceheader">Announcements</h3>
+                                                        <h3 id="announceheader"><span id="notify">Announcements</span></h3>
                                                     </div>
                                                     <div class="col-xs-12 dashsection">
                                                         <div class="tabwidget" id="tabmusic-wt" aria-describedby="announceheader">
