DashBoard Survey Alert
-- For the Dashboard Alert, refer to files _lynnstyles.css_ (leave out lines 7, 19, 305-308, 863), _dashboard.html_, _dashboard_hide.html_, and lynnjqueryscript.js (because some of the alert buttons are styled there based on functionality)

--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -215,7 +215,7 @@
                 <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                     <label class="switch">
                         <input class="togglesavemore" type="checkbox">
-                        <span class="slider uppercase">
+                        <span class="slider">
                             <span id="on">On</span> 
                             <span id="off">Off</span>
                         </span>
