Assessment Issue 18.3 Fix
-- Local implementation of Maven implementation, already merged into the application

--- a/amend_mark_ROA_optional.html
+++ b/amend_mark_ROA_optional.html
@@ -696,20 +696,25 @@
                                                   <label for="inlineRadio013" class="radio-inline radiocontainer">Yes<input type="radio" name="meaningradio" id="inlineRadio013" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                   <label for="inlineRadio014" class="radio-inline radiocontainer">No<input type="radio" name="meaningradio" id="inlineRadio014" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                 </div><!--END radiogroup-->
-                                                <div id="yesmeaning" role="alert" aria-live="assertive" class="form-horizontal form-group form-group-md">
-                                                	<div class="row">
-                                                        <div class="col-xs-12 col-md-4">
+                                                <div id="yesmeaning" role="alert" aria-live="assertive" class="form-horizontal form-group form-group-md" style="">
+                                                    <div class="row">
+                                                        <div class="col-xs-12 col-sm-5">
                                                             <label for="yesmeaning" class="sr-only">What has meaning or significance?</label>
-                                                            <input type="text" class="form-control" id="yesmeaning">
+                                                            <input type="text" class="form-control" id="yesmeaning" value="">
                                                         </div>
-                                                        <div class="control-label col-xs-12 col-md-4">
+                                                        <div class="control-label col-xs-12 col-sm-7">
                                                             <p>in the mark means or signifies</p>
                                                         </div>
-                                                        <div class="col-xs-12 col-md-4">
-                                                            <label for="means" class="sr-only">enter what the mark means or signifies</label>
-                                                            <input type="text" class="form-control" id="means">
+                                                    </div>
+                                                    <div class="row form-group form-group-md">
+                                                        <div class="col-xs-12 col-sm-5">
+                                                            <label for="yesIndustry" class="sr-only">enter what the mark means or signifies</label>
+                                                            <input type="text" class="form-control" id="yesIndustry" value="">
                                                         </div>
-                                                  	</div>   
+                                                        <div class="control-label col-xs-12 col-sm-7">
+                                                            <p>in the relevant trade or industry.</p>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </section>
