--- a/petition_torevive_ROA_S1_(2month-1stclaim_nonfinal).html
+++ b/petition_torevive_ROA_S1_(2month-1stclaim_nonfinal).html
@@ -1,16 +1,12 @@
 <!doctype html>
-<html th:fragment="layout (template, menu)" lang="en" xml:lang="en">
-
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
-
     <title>Petition to Revive Abandoned Application ROA | 2 Month 1st Claim Non-Final :: USPTO.gov :: webapp prototype</title>
     <!--ROA scenario 1 (2month - 1st claim, non final)-->
-
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -340,8 +336,8 @@
                                                     </div>
                                                 </div>
                                             </fieldset>
-                                        </form>
-                                    </div>
+                                    	</div>
+                                   	</form>
                                     <div class="inlinebuttons btn-group btn-group-justified" role="navigation" aria-label="view previous or next page" id="prevnxt">
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
@@ -356,9 +352,10 @@
                         </div>                    
                     </div>
                 </div>
-            </main>
-        </div><!--END div content-->
-    </div><!--END div container-->
+           	</div>
+        </main>
+    </div><!--END div content-->
+</div><!--END div container-->
   
 		    <!--jquery and web jars -->
     <!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
