Datepicker onSubmit Restrictions
-- Added pattern to restrict dates and alert erroneous manually-entered dates on submission

--- a/additional_information_ROA_optional.html
+++ b/additional_information_ROA_optional.html
@@ -436,11 +436,11 @@
                                                                 <div class="row">
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                         <label for="otherformfirst" class="matchlabelheight">Provide date of first use in another form:<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="otherformfirst" name="otherformfirst" placeholder="mm/dd/yyy">
+                                                                        <input type="text" class="form-control datepicker" id="otherformfirst" name="otherformfirst" placeholder="mm/dd/yyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                         <label for="otherformcommerce" id="getit" class="matchlabelheight">Provide date of first use in commerce in another form:<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="otherformcommerce" name="otherformcommerce" placeholder="mm/dd/yyy">
+                                                                        <input type="text" class="form-control datepicker" id="otherformcommerce" name="otherformcommerce" placeholder="mm/dd/yyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                 </div>
                                                             </div>
