--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -752,7 +752,7 @@
                                         </div>
                                         <div class="form-group form-group-md col-xs-12 col-md-4">
                                             <label for="bar-membership-date">Date of admission<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                            <input type="text" class="form-control datepicker" id="bar-membership-date" name="attorneyBarAdmissionDate" value="" placeholder="mm/dd/yyyy">
+                                            <input type="text" class="form-control datepicker" id="bar-membership-date" name="attorneyBarAdmissionDate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                         </div>
                                     </div>
                                     <div class="form-group form-group-md upload">
