--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -296,11 +296,11 @@
                                                         <div class="row form-group form-group-md yescommerce" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                 <label for="connectiondateone" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                <input type="text" class="form-control datepicker" id="connectiondateone" name="connectiondateone" placeholder="mm/dd/yyyy">
+                                                                <input type="text" class="form-control datepicker" id="connectiondateone" name="connectiondateone" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                             </div> 
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                 <label for="firstconnection-date" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" placeholder="mm/dd/yyyy">
+                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimenseven" tabindex="0" aria-labelledby="individualspecimen_1" id="">
@@ -365,7 +365,7 @@
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
                                                                         <label for="applicationdate">Foreign application filing date: <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control foreignfiling datepicker" id="applicationdate" name="applicationdateone" min="" max="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control foreignfiling datepicker" id="applicationdate" name="applicationdateone" min="" max="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
                                                                         <p id="basisforeg">Note: Foreign Application Information provides a basis for filing and a priority date, but not a basis for registration.</p>                                                     					
@@ -411,15 +411,15 @@
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
                                                                         <label for="reg-date">Foreign registration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="reg-date" name="regdate" value="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control datepicker" id="reg-date" name="regdate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
                                                                         <label for="reg-date-exp">Foreign registration expiration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="reg-date-exp" name="regdatexp" value="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control datepicker" id="reg-date-exp" name="regdatexp" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
                                                                         <label for="renew-date">Foreign registration renewal date (if applicable): <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="renew-date" name="renewdate" value="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control datepicker" id="renew-date" name="renewdate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12 upload">
                                                                         <p id="upimagethree">Please provide a copy of the Foreign Registration Certificate. <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
@@ -478,7 +478,7 @@
                                                             </div> 
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                 <label for="firstconnection-date" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy">
+                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimeneight" tabindex="0" aria-labelledby="individualspecimen_2" id="">
@@ -543,7 +543,7 @@
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
                                                                         <label for="application-date">Foreign application filing date: <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control foreignfiling datepicker" id="application-date" name="applicationdate" min="" max="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control foreignfiling datepicker" id="application-date" name="applicationdate" min="" max="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
                                                                         <p id="basisforeg">Note: Foreign Application Information provides a basis for filing and a priority date, but not a basis for registration.</p>                                                     					<div role="radiogroup" aria-labelledby="basisforeg" class="form-group form-group-md">
@@ -588,15 +588,15 @@
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
                                                                         <label for="reg-date">Foreign registration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="reg-date" name="regdate" value="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control datepicker" id="reg-date" name="regdate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
                                                                         <label for="reg-date-exp">Foreign registration expiration date: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="reg-date-exp" name="regdatexp" value="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control datepicker" id="reg-date-exp" name="regdatexp" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
                                                                         <label for="renew-date">Foreign registration renewal date (if applicable): <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="renew-date" name="renewdate" value="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control datepicker" id="renew-date" name="renewdate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12 upload">
                                                                         <p id="upimagefive">Please provide a copy of the Foreign Registration Certificate. <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
