--- a/post_reg_section8.html
+++ b/post_reg_section8.html
@@ -368,11 +368,11 @@
                                                                 <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                         <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div> 
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                         <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                         <label for="reason">Reason for nonuse:</label> 
@@ -430,7 +430,7 @@
                                                                     </div> 
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                         <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy">
+                                                                        <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                     </div>
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                         <label for="reason">Reason for nonuse:</label> 
@@ -534,11 +534,11 @@
                                                                         <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                                 <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                                <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy">
+                                                                                <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                             </div> 
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                                 <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy">
+                                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                             </div>
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                                 <label for="reason">Reason for nonuse:</label> 
@@ -592,11 +592,11 @@
                                                                         <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                                 <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                                <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy">
+                                                                                <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                             </div> 
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                                 <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy">
+                                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
                                                                             </div>
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                                 <label for="reason">Reason for nonuse:</label> 
