--- a/post_reg_incontestable.html
+++ b/post_reg_incontestable.html
@@ -292,7 +292,7 @@
                             <div class="col-xs-12">
                             	<div class="row basis">
                                 	<div class="col-xs-12">		
-                                        <input class="form-check-input checkmark" type="checkbox" value="selectall" tabindex="0" aria-labelledby="selall" id="select">
+                                        <input class="form-check-input checkmark selectallclasses" type="checkbox" value="selectall" tabindex="0" aria-labelledby="selall" id="select">
                                         <label class="form-check-label form-check form-check-left" for="select" id="selall"><span class="radio notspecial">Select all</span></label>
                                 	</div>
                                 </div>
@@ -327,8 +327,8 @@
                                     </div>
                                     <div class="row basis">
                                         <div class="col-xs-12">
-											<input class="form-check-input checkmark" type="checkbox" value="19gs" tabindex="0" aria-labelledby="class19bathsoap" id="18bathsoap">
-                                        	<label class="form-check-label form-check form-check-left" for="18bathsoap" id="class19bathsoap"><span class="radio notspecial">Liquid Bath Soap</span></label>
+											<input class="form-check-input checkmark" type="checkbox" value="19gs" tabindex="0" aria-labelledby="class19bathsoap" id="19bathsoap">
+                                        	<label class="form-check-label form-check form-check-left" for="19bathsoap" id="class19bathsoap"><span class="radio notspecial">Liquid Bath Soap</span></label>
                                         </div>
                                     </div>
                                </fieldset>
