Incontestable Select All: G/S-level
-- Added class to HTML
-- Function for new class, G/S-level

--- a/post_reg_incontestable.html
+++ b/post_reg_incontestable.html
@@ -298,7 +298,7 @@
                                 </div>
                                 <fieldset aria-label="class18">
                                     <div class="card-text noexpand blue">
-                                        <input class="form-check-input checkmark" type="checkbox" value="class18" tabindex="0" aria-labelledby="class18" id="class_18">
+                                        <input class="form-check-input checkmark selectallgs" type="checkbox" value="class18" tabindex="0" aria-labelledby="class18" id="class_18">
                                         <label class="form-check-label form-check form-check-left" for="class_18" id="class18"><span class="radio notspecial weight600">Class 18</span></label>
                                     </div>
                                     <div class="row basis">
@@ -316,7 +316,7 @@
                                 </fieldset>
                                 <fieldset aria-label="class019"> 
                                     <div class="card-text noexpand blue">
-                                        <input class="form-check-input checkmark" type="checkbox" value="class19" tabindex="0" aria-labelledby="class19" id="class_19">
+                                        <input class="form-check-input checkmark selectallgs" type="checkbox" value="class19" tabindex="0" aria-labelledby="class19" id="class_19">
                                         <label class="form-check-label form-check form-check-left" for="class_19" id="class19"><span class="radio notspecial weight600">Class 19</span></label>
                                     </div>
                                     <div class="row basis">
